Fix font size on mobile

--- a/src/documents/styles/modules/banner.css.less
+++ b/src/documents/styles/modules/banner.css.less
@@ -15,7 +15,7 @@
     .transition(height 0.3s);
 
     @media screen and (max-width: 767px) {
-        font-size: 1.5em;
+        font-size: 1.8em;
         padding: 120px 0 10px 0;
         background-image: none;
     }
